<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:fillViewport="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/constrainLayout"
    android:orientation="vertical"
    >

    <include layout="@layout/toolbar_layout" />

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        >


        <LinearLayout
            android:background="@color/custom_grey"

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            >

            <ImageView
                android:id="@+id/capturedImage"
                android:layout_width="match_parent"
                android:layout_height="275dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:adjustViewBounds="true"
                android:contentDescription="@string/image_description"
                android:cropToPadding="true"
                android:scaleType="fitCenter"
                android:elevation="4dp"/>

            <Button
                android:id="@+id/captureImageBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/capturedImage"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/button_style"
                android:text="@string/take_pic_btn_text" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_above="@id/formTitle"
                android:layout_below="@id/captureImageBtn"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:background="#1F3C88" />

            <TextView
                android:id="@+id/formTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_margin="10dp"
                android:text="@string/form_title"
                android:textSize="20sp" />

            <!--Time-->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/timeView"

                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_above="@+id/dateView"
                android:layout_alignParentStart="true"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:focusable="true"
                android:focusableInTouchMode="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/time_hint"
                    android:paddingStart="20dp"
                    android:paddingTop="20dp"
                    android:paddingEnd="20dp"
                    android:inputType="time"/>
            </com.google.android.material.textfield.TextInputLayout>

            <!--Date-->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/dateView"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_above="@id/resultView1"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/date_hint"
                    android:paddingStart="20dp"
                    android:paddingTop="20dp"
                    android:paddingEnd="20dp"
                    android:inputType="date"/>
            </com.google.android.material.textfield.TextInputLayout>

            <!--AIC%-->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/resultView1"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_above="@+id/resultView2"
                android:layout_alignParentStart="true"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/a1c_hint_1"
                    android:paddingStart="20dp"
                    android:paddingTop="20dp"
                    android:paddingEnd="20dp"
                    android:inputType="numberDecimal"/>
            </com.google.android.material.textfield.TextInputLayout>

            <!--AICmol-->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/resultView2"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_above="@+id/lotView"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/a1c_hint_2"
                    android:paddingStart="20dp"
                    android:paddingTop="20dp"
                    android:paddingEnd="20dp"
                    android:inputType="numberDecimal"/>
            </com.google.android.material.textfield.TextInputLayout>


            <!--Lot-->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/lotView"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_above="@id/instIdView"
                android:layout_alignParentStart="true"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/lot_hint"
                    android:paddingStart="20dp"
                    android:paddingTop="20dp"
                    android:paddingEnd="20dp"
                    android:inputType="number"/>
            </com.google.android.material.textfield.TextInputLayout>

            <!--InstID-->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/instIdView"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_above="@id/testIdView"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/inst_id_hint"
                    android:paddingStart="20dp"
                    android:paddingTop="20dp"
                    android:paddingEnd="20dp" />
            </com.google.android.material.textfield.TextInputLayout>
            <!--TestID-->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/testIdView"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_above="@id/operatorView"
                android:layout_alignParentStart="true"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/test_id_hint"
                    android:paddingStart="20dp"
                    android:paddingTop="20dp"
                    android:paddingEnd="20dp"
                    android:inputType="number"/>
            </com.google.android.material.textfield.TextInputLayout>

            <!--Operator-->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/operatorView"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_above="@id/submitBtn"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/operator_hint"
                    android:paddingStart="20dp"
                    android:paddingTop="20dp"
                    android:paddingEnd="20dp"/>
            </com.google.android.material.textfield.TextInputLayout>


            <Button
                android:id="@+id/submitBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_margin="10dp"
                android:background="@drawable/button_style"
                android:text="@string/submit_btn_text" />


        </LinearLayout>
    </ScrollView>
</LinearLayout>
